tests/type_errors/set_from_list_of_lists.nos
# expect_error: does not implement Eq
# Lists are not hashable and cannot be Set elements
main() = Set.fromList([[1, 2], [3, 4]])
